# Infrared-Simulation-System

./: CMakeLists.txt
cmake/: CMakeHelper.cmake  FindASSIMP.cmake
lib/: CMakeLists.txt
lib/SiftGPU/: GLTexImage.cpp
lib/VLFeat/: CMakeLists.txt
src/: CMakeLists.txt  main.cc  resources.qrc
src/base/: camera.cc  camera.h  camera_database.cc  camera_database.h  camera_database_test.cc1  camera_models.cc  camera_models.h  camera_models_test.cc1  camera_rig.cc  camera_rig.h  camera_rig_test.cc1  camera_test.cc1  correspondence_graph.cc  correspondence_graph.h  correspondence_graph_test.cc1  cost_functions.h  cost_functions_test.cc1  database.cc  database.h  database_cache.cc  database_cache.h  database_cache_test.cc1  database_test.cc1  essential_matrix.cc  essential_matrix.h  essential_matrix_test.cc1  gps.cc  gps.h  gps_test.cc  graph_cut.cc  graph_cut.h  graph_cut_test.cc1  homography_matrix.cc  homography_matrix.h  homography_matrix_test.cc1  image.cc  image.h  image_reader.cc  image_reader.h  image_test.cc1  (+45 more)
src/controllers/: CMakeLists.txt  automatic_reconstruction.cc  automatic_reconstruction.h  bundle_adjustment.cc  bundle_adjustment.h  feature_extract_matching.cc  feature_extract_matching.h  hierarchical_mapper.cc  hierarchical_mapper.h  incremental_mapper.cc  incremental_mapper.h
src/estimators/: absolute_pose.cc  absolute_pose.h  absolute_pose_test.cc1  affine_transform.cc  affine_transform.h  affine_transform_test.cc1  coordinate_frame.cc  coordinate_frame.h  coordinate_frame_test.cc1  essential_matrix.cc  essential_matrix.h  essential_matrix_test.cc1  euclidean_transform.h  fundamental_matrix.cc  fundamental_matrix.h  fundamental_matrix_test.cc1  generalized_absolute_pose.cc  generalized_absolute_pose.h  generalized_absolute_pose_coeffs.cc  generalized_absolute_pose_coeffs.h  generalized_absolute_pose_test.cc1  generalized_relative_pose.cc  generalized_relative_pose.h  generalized_relative_pose_test.cc1  homography_matrix.cc  homography_matrix.h  homography_matrix_test.cc1  pose.cc  pose.h  similarity_transform.h  translation_transform.h  translation_transform_test.cc1  triangulation.cc  triangulation.h  two_view_geometry.cc  two_view_geometry.h  two_view_geometry_test.cc1  utils.cc  utils.h  utils_test.cc1
src/feature/: extraction.cc  extraction.h  matching.cc  matching.h  sift.cc  sift.h  sift_test.cc1  types.cc  types.h  types_test.cc1  utils.cc  utils.h  utils_test.cc1
src/mvs/: CMakeLists.txt  consistency_graph.cc  consistency_graph.h  consistency_graph_test.cc1  cuda_array_wrapper.h  cuda_flip.h  cuda_rotate.h  cuda_transpose.h  depth_map.cc  depth_map.h  depth_map_test.cc1  fusion.cc  fusion.h  gpu_mat.h  gpu_mat_prng.cu  gpu_mat_prng.h  gpu_mat_ref_image.cu  gpu_mat_ref_image.h  gpu_mat_test.cu  image.cc  image.h  mat.h  mat_test.cc1  meshing.cc  meshing.h  model.cc  model.h  normal_map.cc  normal_map.h  normal_map_test.cc1  patch_match.cc  patch_match.h  patch_match_cuda.cu  patch_match_cuda.h  workspace.cc  workspace.h
src/network/: CMakeLists.txt  dataset.cc  dataset.h  test.cc
src/optim/: bundle_adjustment.cc  bundle_adjustment.h  bundle_adjustment_test.cc1  combination_sampler.cc  combination_sampler.h  combination_sampler_test.cc1  least_absolute_deviations.cc  least_absolute_deviations.h  least_absolute_deviations_test.cc1  loransac.h  loransac_test.cc1  progressive_sampler.cc  progressive_sampler.h  progressive_sampler_test.cc1  random_sampler.cc  random_sampler.h  random_sampler_test.cc1  ransac.h  ransac_test.cc1  sampler.h  sprt.cc  sprt.h  support_measurement.cc  support_measurement.h  support_measurement_test.cc1
src/retrieval/: geometry.cc  geometry.h  geometry_test.cc1  inverted_file.h  inverted_file_entry.h  inverted_file_entry_test.cc1  inverted_index.h  utils.h  visual_index.h  visual_index_test.cc1  vote_and_verify.cc  vote_and_verify.h
src/sfm/: incremental_mapper.cc  incremental_mapper.h  incremental_triangulator.cc  incremental_triangulator.h
src/shaders/: model_loading.fs  model_loading.vs
src/tools/: example.cc
src/ui/: CMakeLists.txt  bundle_adjustment_widget.cc  bundle_adjustment_widget.h  colormaps.cc  colormaps.h  database_management_widget.cc  database_management_widget.h  dense_reconstruction_widget.cc  dense_reconstruction_widget.h  enviroment_set_widget.cc  enviroment_set_widget.h  feature_extraction_widget.h  image_viewer_widget.cc  image_viewer_widget.h  line_painter.cc  line_painter.h  log_widget.cc  log_widget.h  main_window.cc  main_window.h  match_matrix_widget.cc  match_matrix_widget.h  mesh_painter copy.cc  mesh_painter copy.h  mesh_painter.cc  mesh_painter.h  model_viewer_widget.cc  model_viewer_widget.h  movie_grabber_widget.cc  movie_grabber_widget.h  options_widget.cc  options_widget.h  point_painter.cc  point_painter.h  point_viewer_widget.cc  point_viewer_widget.h  project_new_widget.cc  project_new_widget.h  qt_utils.cc  qt_utils.h  (+14 more)
src/util/: CMakeLists.txt  bitmap.cc  bitmap.h  bitmap_test.cc1  cache.h  cache_test.cc1  camera_specs.cc  camera_specs.h  cuda.cc  cuda.h  cudacc.cc  cudacc.h  endian.h  endian_test.cc1  logging.cc  logging.h  math.cc  math.h  math_test.cc1  matrix.h  matrix_test.cc1  misc.cc  misc.h  misc_test.cc1  opengl_utils.cc  opengl_utils.h  opengl_utils_test.cc1  option_manager.cc  option_manager.h  ply.cc  ply.h  random.cc  random.h  random_test.cc1  sqlite3_utils.h  string.cc  string.h  string_test.cc1  threading.cc  threading.h  (+8 more)
